# docs/swagger.yaml
@@ -1275,39 +1275,6 @@ paths:
       summary: Create a new chapters
       tags:
       - Chapters
-  /api/chapters/{chapter_id}/topics:
-    get:
-      consumes:
-      - application/json
-      description: Get all topics for a specific chapter
-      parameters:
-      - description: Chapter ID
-        in: path
-        name: chapter_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.TopicResponse'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Get topics by chapter
-      tags:
-      - topics
   /api/chapters/{id}:
     delete:
       consumes:
@@ -1619,39 +1586,6 @@ paths:
       summary: Create a new course
       tags:
       - Courses
-  /api/courses/{course_id}/topics:
-    get:
-      consumes:
-      - application/json
-      description: Get all topics for a specific course
-      parameters:
-      - description: Course ID
-        in: path
-        name: course_id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/models.TopicResponse'
-            type: array
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/models.ErrorResponse'
-      security:
-      - BearerAuth: []
-      summary: Get topics by course
-      tags:
-      - topics
   /api/courses/{id}:
     delete:
       description: Admin deletes a course by ID
